Fix home page layout on mobile

--- a/webapi/static/styles/site.css
+++ b/webapi/static/styles/site.css
@@ -1,38 +1,46 @@
 h1 {
-    text-align: center;
-    font-weight: bold;
-    margin-bottom: 4rem;
+		text-align: center;
+		font-weight: bold;
+		margin-bottom: 4rem;
 }
 
 th {
-    background: #606c76;
-    color: #e1e1e1;
-    border: none;
+		background: #606c76;
+		color: #e1e1e1;
+		border: none;
 }
 th:first-child,
 td:first-child {
-    padding-left: 8px;
+		padding-left: 8px;
 }
-table > *:last-child > tr:last-child > * {
-    border: none;
+table > *:last-child > tr:last-child > th,
+table > *:last-child > tr:last-child > td {
+	border: none;
 }
 
-main.container {
-    padding-top: 4rem;
+.main-container {
+	padding-top: 4rem;
 }
 
 .portal-table {
-    max-width: 560px;
-    margin: auto;
+	max-width: 560px;
+	margin: auto;
+	overflow: hidden;
+}
+
+@media (max-width: 560px) {
+	.portal-table {
+		max-width: calc(100vw - 4rem);
+	}
 }
 
 .portal-table th:first-child {
-    text-align: right;
+	text-align: right;
 }
 .portal-table td {
-    text-align: left;
+	text-align: left;
 }
 
 .leaderboard-table th, td {
-    text-align: center;
+		text-align: center;
 }
